'Fix' issue with large pipeline stage arrow gap bit showing up over mini pipelines.

--- a/src/main/resources/public/index.css
+++ b/src/main/resources/public/index.css
@@ -1,6 +1,7 @@
 .pipeline {
 	display: flex;
 	flex-direction: row;
+	margin-bottom: 5px;
 }
 
 .pipeline.mini {
